Add styles to landing page

--- a/styles.less
+++ b/styles.less
@@ -1,2 +1,4 @@
 @import "styles/global.less";
 @import "styles/section.less";
+@import "styles/main-article.less";
+@import "styles/container-boxes.less";
