--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
 body {
   margin: 0;
   padding: 24px 48px 64px 48px;
+  font-family: 'Lato', sans-serif;
+  text-align: justify;
 }
 h1,
 h2,
@@ -16,6 +18,8 @@ h3 {
   padding: 10px;
   margin: 0 auto;
   position: relative;
+  background: white;
+  text-shadow: 4px 4px 4px #333333;
 }
 .touristic--place__img {
   width: 1320px;
@@ -25,6 +29,8 @@ h3 {
   width: 100%;
   height: 624px;
   object-fit: cover;
+  border: 4px solid #888888;
+  border-radius: 8px;
 }
 .touristic--place__information {
   width: 50%;
@@ -33,8 +39,77 @@ h3 {
   text-align: center;
   color: white;
   text-transform: uppercase;
+  top: 160px;
+  left: 0;
+  right: 0;
 }
 .touristic--place__category {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.72);
   font-weight: bold;
+  font-family: 'Oswald', sans-serif;
+}
+.touristic--place__title {
+  font-family: 'Oswald', sans-serif;
+  font-size: 36px;
+  color: white;
+}
+.touristic--place__typical--animal {
+  width: 256px;
+  margin: 0 auto;
+  position: absolute;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  top: 320px;
+  left: 0;
+  right: 0;
+  color: white;
+}
+.touristic--place__typical--animal img {
+  width: 96px;
+  height: 80px;
+  float: left;
+  padding: 0 0 0 10px;
+  border-radius: 96px;
+  margin: 0 8px;
+}
+.touristic--place__typical--animal span {
+  display: inline-block;
+  font-weight: bold;
+}
+.touristic--place__typical--animal--title {
+  color: rgba(255, 255, 255, 0.88);
+  margin: 24px 0 2px 0;
+}
+.main--article {
+  max-width: 660px;
+  margin: 0 auto;
+}
+.main--article__intro {
+  font-size: 32px;
+}
+.main--article h2 {
+  margin: 40px 0;
+  font-size: 40px;
+  text-align: center;
+}
+.container--boxes {
+  width: 1400px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+.box {
+  max-width: 430px;
+}
+.box__content {
+  padding: 25px;
+  background: white;
+}
+.box span {
+  color: #EEF1F7;
+  font-family: 'Oswald', sans-serif;
+}
+.box a {
+  text-decoration: none;
+  color: #012179;
 }
