--- a/styles/global.less
+++ b/styles/global.less
@@ -5,6 +5,8 @@
 body {
     margin: 0;
     padding: 24px 48px 64px 48px;
+    font-family: 'Lato', sans-serif;
+    text-align: justify;
 }
 
 h1, h2, h3 {
