--- a/styles/section.less
+++ b/styles/section.less
@@ -4,6 +4,8 @@
     padding: 10px;
     margin: 0 auto;
     position: relative;
+    background: white;
+    text-shadow: 4px 4px 4px #333333;
     &__img {
         width: 1320px;
         position: absolute;
@@ -11,6 +13,8 @@
             width: 100%;
             height: 624px;
             object-fit: cover;
+            border: 4px solid #888888;
+            border-radius: 8px;
         }
     }
     &__information {
@@ -20,9 +24,50 @@
         text-align: center;
         color: white;
         text-transform: uppercase;
+        top: 160px;
+        left: 0;
+        right: 0;
     }
     &__category {
-        color: fade(white, 50%);
+        color: fade(white, 72%);
         font-weight: bold;
+        font-family: 'Oswald', sans-serif;
+    }
+    &__title {
+        font-family: 'Oswald', sans-serif;
+        font-size: 36px;
+        color: white;
+    }
+    &__typical--animal {
+        width: 256px;
+        margin: 0 auto;
+        position: absolute;
+        color: white;
+        text-transform: uppercase;
+        font-family: 'Oswald', sans-serif;
+        top: 320px;
+        left: 0;
+        right: 0;
+        color: white;
+
+        img {
+            width: 96px;
+            height: 80px;
+            float: left;
+            padding: 0 0 0 10px;
+            border-radius: 96px;
+            margin: 0 8px;
+        }
+        span {
+            display: inline-block;
+            font-weight: bold;
+        }
+        &--title {
+            color: fade(white, 88%);
+            margin: 24px 0 2px 0;
+        }
+        &--name {
+
+        }
     }
 }
