Add footer styles

--- a/styles/section.less
+++ b/styles/section.less
@@ -67,7 +67,9 @@
             margin: 24px 0 2px 0;
         }
         &--name {
-
+            text-shadow: 2px 2px 2px #333333;
+            color: #eeeeee;
+            opacity: 96%;
         }
     }
 }
