--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,11 @@ h3 {
   color: rgba(255, 255, 255, 0.88);
   margin: 24px 0 2px 0;
 }
+.touristic--place__typical--animal--name {
+  text-shadow: 2px 2px 2px #333333;
+  color: #eeeeee;
+  opacity: 96%;
+}
 .main--article {
   max-width: 660px;
   margin: 0 auto;
@@ -101,7 +106,16 @@ h3 {
 .box {
   max-width: 430px;
 }
+.box__img {
+  max-width: 400px;
+  height: 320px;
+}
+.box__img img {
+  width: 100%;
+  height: 100%;
+}
 .box__content {
+  max-width: 400px;
   padding: 25px;
   background: white;
 }
