--- a/styles/container-boxes.less
+++ b/styles/container-boxes.less
@@ -7,7 +7,19 @@
 
 .box {
     max-width: 430px;
+
+    &__img {
+        max-width: 400px;
+        height: 320px;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
     &__content {
+        max-width: 400px;
         padding: 25px;
         background: white;
     }
