--- a/styles/section.less
+++ b/styles/section.less
@@ -6,6 +6,7 @@
     position: relative;
     background: white;
     text-shadow: 4px 4px 4px #333333;
+    background: #777777;
     &__img {
         width: 1320px;
         position: absolute;
@@ -13,7 +14,10 @@
             width: 100%;
             height: 624px;
             object-fit: cover;
-            border: 4px solid #888888;
+            border-width: 1px 0 0 1px;
+            border-style: solid;
+            border-color: #aaaaaa;
+            box-shadow: 1px 1px 4px 4px #aaaaaa;
             border-radius: 8px;
         }
     }
