--- a/styles/global.less
+++ b/styles/global.less
@@ -7,6 +7,7 @@ body {
     padding: 24px 48px 64px 48px;
     font-family: 'Lato', sans-serif;
     text-align: justify;
+    background: #777777;
 }
 
 h1, h2, h3 {
